removed bootstrap dependency and fixed unusual spacing in notifications

--- a/site/stylesheets/hovering.less
+++ b/site/stylesheets/hovering.less
@@ -62,7 +62,7 @@
         padding:14px;
         vertical-align:top;
         width:300px;
-        height:80px;
+        height:52px;
         font-size:18px;
         color:@g600;
     }
